DevTools Settings page high contrast mode a11y bug fix
High contrast dark mode
before: https://imgur.com/a/hvht9g2
after: https://imgur.com/a/UGiGvz0

High contrast light mode
before: https://imgur.com/a/3rMXkCc
after: https://imgur.com/a/FEV1TW2

In light mode, the texts in the settings navigation panel are darker and more clear after adjustment, as shown in this side by side comparison, left (before), right (after):
https://imgur.com/a/zjPysb8

Bug: 1255188

--- a/front_end/panels/settings/settingsScreen.css
+++ b/front_end/panels/settings/settingsScreen.css
@@ -187,3 +187,21 @@ fieldset {
 .settings-experiment-unstable {
   color: var(--color-text-secondary);
 }
+
+@media (forced-colors: active) {
+  .settings-window-title {
+    color: canvastext;
+  }
+
+  .tabbed-pane-header-tab {
+    background: ButtonFace;
+    color: canvastext !important; /* stylelint-disable-line declaration-no-important */
+  }
+}
+
+@media (forced-colors: active) and (prefers-color-scheme: dark) {
+  .tabbed-pane-header-tab.selected {
+    background: ButtonFace;
+    color: HighlightText !important; /* stylelint-disable-line declaration-no-important */
+  }
+}
